# quickjs

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: quickjs.yml
native/: CMakeLists.txt  build-macos.sh  build.bat  download-tools.bat
native/quickjs/: QuickJSContext.cpp  QuickJSContext.h  config.h  context-jni.cpp  libunicode.c  libunicode.h  quickjs-debugger-transport-win.c  quickjs-debugger.c  quickjs-libc.c  quickjs.c  quickjs.h
src/main/java/com/koushikdutta/quack/: JSValue.java  JavaScriptObject.java  QuackCoercion.java  QuackContext.java  QuackException.java  QuackJavaObject.java  QuackMethodCoercion.java  WeakExactHashMap.java
src/test/java/com/koushikdutta/quack/: QuackTests.java  StreamUtility.java  TestQuack.java  TestWeakExactHashMap.java
